# wordlist-bigrams

./: bigrams-all-g-1.txt  bigrams-all-g-2.txt  bigrams-brown+reuters-g-1.txt  bigrams-brown+reuters-g-2.txt  bigrams-brown-g-1.txt  bigrams-reuters-g-1.txt  bigrams-reuters-g-2.txt  generate-list.py  pyproject.toml
.github/: dependabot.yml
